--- a/demo/Sensify/app/input/templates/input.html
+++ b/demo/Sensify/app/input/templates/input.html
@@ -13,7 +13,7 @@
              style="text-align: center;margin: 17px 20% 50px;">
             <form action="/recommend" method="POST">
                 <div class="text-center">
-                    <input type="text" id="user_input" name="user_input" value="">
+                    <textarea type="text" id="user_input" name="user_input" value="" rows="4" cols="100"></textarea> 
                 </div>
                 <button class="btn btn-primary" id="recommend-btn" type="submit">
                     Generate Playlist
