--- a/demo/Sensify/app/result/templates/listen.html
+++ b/demo/Sensify/app/result/templates/listen.html
@@ -12,8 +12,16 @@
                     frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         </div>
 
-        <div class="text-center" style="padding-top: 47px;">
-            <a href="/">Home</a>
+        <div>
+            <form action="/input" method="post">
+                <p class="text-center text-white">
+                    <span>
+                    <a href="/input">
+                        Try again!
+                    </a>
+                </span>
+                </p>
+            </form>
         </div>
 
         <script>
